micromobility_car_navigation/local/Project/dev_ws/log/build_2021-03-11_16-15-51/pathfinding/stderr.log
  File "/home/user/Projects/dev_ws/install/pathfinding/lib/python3.8/site-packages/pathfinding/pathfinding_service.py", line 1
    from ../mm_interfaces.srv import Pathfinding
           ^
SyntaxError: invalid syntax

